--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <!-- HINT -->
-    <div class="hint" id="hint">“No” seems a bit shy 😈</div>
+    <div class="hint" id="hint">Please don't say no bebek 😈</div>
 
     <section class="result" id="result">
       <h2>YAY! 🎉</h2>
@@ -300,6 +300,7 @@
   </script>
 </body>
 </html>
+
 
 
 
